Justify the selection of DTD

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <title>gtsop.me</title>
- </head>
- <body>
-  <p>A Journey begins</p>
- </body>
-</html>
+<!--
+  As a developer I make a ton of decisions without knowing the actuall impact
+  of those decisions on the browser or on the user's experience. That will not
+  be the case here. Everything written in this project must be justified. The
+  idea of this concept is not to create a better user experience by making the
+  best choises, but learning how everything works at a deeper level.
+
+  So, let's begin. The first line in this file contains the document type
+  declaration which is used by the web browser to associate the served document
+  with a specific document type definition (DTD), enabling the appropriate
+  parsing mode of the browser. In this project I don't want to be compatible
+  with older browser versions, so I'll just use the "standard" mode.Here is
+  more info on this subject:
+
+  https://hsivonen.fi/doctype/
+
+  The reason this comment is written after the DTD is because all versions of
+  IE will use the "quirks" mode if the first line of the document does not 
+  contain the DTD.
+-->
 
