Add github and linked in links for people to click on

--- a/index.html
+++ b/index.html
@@ -77,4 +77,16 @@
 
   It works! We can declare with confidence: One should NOT omit the body tag.
 -->
-<body></body>
+<body>
+  <!--
+    Add this junk here so that people have something to look at
+  -->
+  <h1 style="font-family: monospace; text-align: center">
+    Site under construction
+  </h1>
+  <p style="font-family: monospace; text-align: center">You may visit my
+    <a target="_blank" href="https://github.com/gtsop">github</a> or
+    <a target="_blank" href="https://www.linkedin.com/in/gtsop/">linked in</a>
+    in the meanwhile, thanks!
+  </p>
+</body>
